--- a/ekzamen/templates/home.html
+++ b/ekzamen/templates/home.html
@@ -9,7 +9,7 @@
 
     {% if user.is_authenticated %}
         <p>Сәлем, {{ user.email }}</p>
-        <p><a href="{% url 'logout' %}">Шығу</a></p>
+        <p><a href="{% url 'logout' %}">Шығу</a> | <a href="{% url 'book' %}">Кітап қосу</a> | <a href="{% url 'books' %}">Кітаптар</a></p> 
     {% else %}
         <p>Сіз кірген жоқсыз</p>
         <p><a href="{% url 'login' %}">Кіру</a> | <a href="{% url 'register' %}">Тіркелу</a></p>
